# My-Work

./: .gitignore
Meciuri Fotbal C#/: Lab8FacultativCS.sln
Meciuri Fotbal C#/Lab8FacultativCS/: Lab8FacultativCS.csproj  Program.cs  echipe.txt  elevi.txt  jucatori.txt  jucatoriactivi.txt  meciuri.txt
Meciuri Fotbal C#/Lab8FacultativCS/Properties/: AssemblyInfo.cs  Console.cs
Meciuri Fotbal C#/Lab8FacultativCS/model/: DelegatesEntitiesFromFile.cs  Echipa.cs  Elev.cs  Entitate.cs  Jucator.cs  JucatorActiv.cs  Meci.cs  Tip.cs
Programare Orientata Obiect - Python/conversii_baze/: main.py
Programare Orietanta Obiect - C++/Alimentara/: CMakeLists.txt  CosGUI.cpp  CosGUI.h  CosGUIDraw.cpp  CosGUIDraw.h  CosMagazin.cpp  CosMagazin.h  Domeniu.cpp  Domeniu.h  Exceptions.h  GUICombined.cpp  GUICombined.h  Magazin_GUI.cpp  Magazin_GUI.h  MyTableModel.cpp  MyTableModel.h  Observer.h  Repozitoriu.cpp  Repozitoriu.h  Service.cpp  Service.h  Teste.cpp  Teste.h  UI.cpp  UI.h  Undo.cpp  Undo.h  Utils.cpp  Utils.h  Validatori.cpp  Validatori.h  exportCVS.cpp  exportCVS.h  main.cpp  nou.txt  start.cpp
Programare Orietanta Obiect - C++/Melodii/: CMakeLists.txt  Domain.cpp  Domain.h  GUI.cpp  GUI.h  MyTableModel.h  Repository.cpp  Repository.h  Service.cpp  Service.h  Tests.cpp  Tests.h  main.cpp  melodii.txt  melodiiTest.txt
Structuri de date si algoritmi/Lab1-Colectie cu relatie/: CMakeLists.txt  Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h  TestExtins.cpp  TestScurt.cpp
Structuri de date si algoritmi/Lab3 - Multidictionar Ordonat LSI/: App.cpp  CMakeLists.txt  IteratorMD.cpp  IteratorMD.h  MD.cpp  MD.h  TestExtins.cpp  TestScurt.cpp  testlab3.cpp  testlab3.h
Structuri de date si algoritmi/Lab4 - Colectie/: CMakeLists.txt  Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h  TestExtins.cpp
Structuri de date si algoritmi/Lab6-HashTables/: CMakeLists.txt  Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h  TestExtins.cpp  TestScurt.cpp
Structuri de date si algoritmi/Lab7 - Dictionar Ordonat/: App.cpp  CMakeLists.txt  DO.cpp  DO.h  Iterator.cpp  Iterator.h  Nod.cpp  Nod.h  TestExtins.cpp  TestLab.cpp  TestLab.h  TestScurt.cpp
ToySocialNetwork/: build.gradle  settings.gradle
(+130 files in other folders)
